???? 0.8.2
    
    user visible changes, client:
    * Added time measurements to batch file produces for windows.
    * Removed redundant quotes from echo messages on windows.
    * Added DownloadTool_win_curl in one-by-one and config-file modes.
    * Concurrent running of config files by curl.

    user visible changes, admin:
    * usage of wsvn instead of svn in all adming commands.
    * Fixed: fix-props output batch file was not written to the current folder.
    * Fixed wrong relative path created for create-links command.

    programmer visible changes:
    * Creation of PlatformSpecificHelper moved to do_command so it can take to consideration settings from the yaml input file.
    * Many tests added to check hard-link creation by rsync (Mac & Linux).
    
3/2/2014 0.8.1 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Little faster sync/copy/syncopy due to optimiztions in SVNItem.
    * Fixed copy_dir_to_dir on Mac that did not create hard links
    * Fixed new_item_at_path that did not create the have map correctly

    user visible changes, admin:
    * new command: create-repo-rev-file, to separate repo rev file creation and uploading.
    * command up-repo-rev only uploads the already created repo rev file.
    * type fixed REPO_REV_FILE_VARS instead of REPO_REV_FILE_VARAIBLES

    programmer visible changes:
    * some rearranging of parser creation, and removed redundant members from CommandLineOptions
    * moved the discovery of info_map's file type to svnTree.py
    * added ConfigVar.resolved_num to help track which var is used in which command.
    * PlatformSpecificHelper's var_assign got new param: comment
    * Many optimizations to SVNItem code.
    * Using cStringIO instead of StringIO.
    * Test files for SVNTree test will be produced without comments, also changed the reference file.
    * added tests for test_platformSpecificHelper not finished yet.