@@ -5,7 +5,8 @@
     * Removed redundant quotes from echo messages on windows.
     * Added DownloadTool_win_curl in one-by-one and config-file modes.
     * Concurrent running of config files by curl.
-
+    * Variable PARALLEL_SYNC has the number of parallel sync processes in config_file mode.
+    
     user visible changes, admin:
     * usage of wsvn instead of svn in all adming commands.
     * Fixed: fix-props output batch file was not written to the current folder.
@@ -14,7 +15,9 @@
     programmer visible changes:
     * Creation of PlatformSpecificHelper moved to do_command so it can take to consideration settings from the yaml input file.
     * Many tests added to check hard-link creation by rsync (Mac & Linux).
-    
+    * create_prefix_instructions_for_item_config_file, create_download_instructions_for_item_config_file,
+        create_postfix_instructions_for_item_config_file: created and perfected.
+        
 3/2/2014 0.8.1 Shai Shasag <shai@waves.com>
 
     user visible changes, client:
